<resources>
    <!-- General -->
    <string name="app_name">Fly With Me!</string>
    <string name="distance">Distance</string>
    <string name="pilots">Pilots</string>
    <string name="today">Today</string>
    <string name="later">Later</string>
    <string name="asl">ASL</string>
    <string name="height">Height</string>
    <string name="cancel">Cancel</string>
    <string name="get_your_wing">Upcoming activity</string>

    <!-- Notification -->
    <string name="are_you_flying">Are you here to fly?</string>
    <string name="will_you_join">Will you come to fly?</string>
    <string name="yes">Yes</string>
    <string name="never_notify_here">Blacklist</string>

    <!-- Status messages -->
    <string name="importing_takeoffs">Importing takeoffs…</string>
    <string name="fetching_noaa_failed">Fetching forecast failed</string>

    <!-- Flight schedule -->
    <string name="graph_text">Flight schedule (click to schedule)</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="no_scheduled_flights">No scheduled flights</string>
    <string name="may_not_register">You haven\'t set your name/phone in the preferences, you need to set this in order to schedule a flight.</string>
    <string name="schedule_flight">Schedule flight</string>
    <string name="scheduling_flight">Scheduling flight</string>
    <string name="unscheduling_flight">Unscheduling flight</string>

    <!-- Preferences -->
    <string name="preferences">Preferences</string>
    <string name="pilot_info">Pilot info</string>
    <string name="pilot_name">Name</string>
    <string name="pilot_name_description">When scheduling a flight, this name will be shown to other pilots. This field is required (or you won\'t be allowed to schedule flights).</string>
    <string name="pilot_name_please_enter">Please enter your name</string>
    <string name="pilot_phone">Phone number</string>
    <string name="pilot_phone_description">When scheduling a flight, this phone number will be shown to other pilots. You don\'t have to fill this in, but it is recommended so other pilots can contact you.</string>
    <string name="notifications">Show notifications</string>
    <string name="vibrate">Vibrate</string>
    <string name="max_distance_to_takeoff">Max distance to takeoff</string>
    <string name="blacklist">Blacklist…</string>
    <string name="blacklist_remove">Blacklist (click to remove)</string>
    <string name="near_takeoff">Notifications when near takeoff</string>
    <string-array name="near_takeoff_max_distance_entries">
        <item>100m</item>
        <item>200m</item>
        <item>500m</item>
        <item>1km</item>
        <item>2km</item>
    </string-array>
    <string-array name="near_takeoff_max_distance_values" translatable="false">
        <item>100</item>
        <item>200</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
    </string-array>
    <string name="near_takeoff_max_distance_default_value" translatable="false">500</string>
    <string name="takeoff_activity">Notifications on takeoff activity</string>
    <string-array name="takeoff_activity_max_distance_entries">
        <item>25km</item>
        <item>50km</item>
        <item>100km</item>
        <item>250km</item>
        <item>500km</item>
    </string-array>
    <string-array name="takeoff_activity_max_distance_values" translatable="false">
        <item>25000</item>
        <item>50000</item>
        <item>100000</item>
        <item>250000</item>
        <item>500000</item>
    </string-array>
    <string name="takeoff_activity_max_distance_default_value" translatable="false">100000</string>

    <!-- Meteogram/sounding -->
    <string-array name="meteogram_sounding_forecast_list_keys">
        <item>Meteogram</item>
        <item>Sounding 12 UTC</item>
        <item>Sounding 15 UTC</item>
        <item>Sounding 18 UTC</item>
        <item>Sounding 21 UTC</item>
        <item>Sounding 00 UTC +1d</item>
        <item>Sounding 03 UTC +1d</item>
        <item>Sounding 06 UTC +1d</item>
        <item>Sounding 09 UTC +1d</item>
        <item>Sounding 12 UTC +1d</item>
        <item>Sounding 15 UTC +1d</item>
        <item>Sounding 18 UTC +1d</item>
        <item>Sounding 21 UTC +1d</item>
        <item>Sounding 00 UTC +2d</item>
        <item>Sounding 03 UTC +2d</item>
        <item>Sounding 06 UTC +2d</item>
        <item>Sounding 09 UTC +2d</item>
        <item>Sounding 12 UTC +2d</item>
        <item>Sounding 15 UTC +2d</item>
        <item>Sounding 18 UTC +2d</item>
        <item>Sounding 21 UTC +2d</item>
        <item>Sounding 00 UTC +3d</item>
        <item>Sounding 03 UTC +3d</item>
        <item>Sounding 06 UTC +3d</item>
        <item>Sounding 09 UTC +3d</item>
        <item>Sounding 12 UTC +3d</item>
        <item>Sounding 15 UTC +3d</item>
        <item>Sounding 18 UTC +3d</item>
        <item>Sounding 21 UTC +3d</item>
        <item>Sounding 00 UTC +4d</item>
    </string-array>
    <integer-array name="meteogram_sounding_forecast_list_values" translatable="false">
        <item>0</item>
        <item>12</item>
        <item>15</item>
        <item>18</item>
        <item>21</item>
        <item>24</item>
        <item>27</item>
        <item>30</item>
        <item>33</item>
        <item>36</item>
        <item>39</item>
        <item>42</item>
        <item>45</item>
        <item>48</item>
        <item>51</item>
        <item>54</item>
        <item>57</item>
        <item>60</item>
        <item>63</item>
        <item>66</item>
        <item>69</item>
        <item>72</item>
        <item>75</item>
        <item>78</item>
        <item>81</item>
        <item>84</item>
        <item>87</item>
        <item>90</item>
        <item>93</item>
        <item>96</item>
    </integer-array>

    <!-- What airspace to draw -->
    <string name="show_airspace_types">Show airspace types</string>
</resources>
