<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/takeoffScheduleLayout"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/scheduleTakeoffName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/scheduleFlightButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/may_not_register"
        android:id="@+id/scheduleMayNotRegister"
        android:layout_span="4"
        android:visibility="visible"
        android:textColor="#ff4444"
        android:layout_below="@+id/scheduleTakeoffName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scheduleFlightButton"
        android:text="@string/schedule_flight"
        android:layout_column="4"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/scheduleRegisteredFlights"
        android:layout_alignTop="@+id/scheduleFlightTime" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:stretchColumns="*"
        android:id="@+id/scheduleFlightTime"
        android:layout_below="@+id/scheduleMayNotRegister"
        android:layout_toStartOf="@+id/scheduleFlightButton">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:id="@+id/scheduleDayPlus"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:id="@+id/scheduleMonthPlus"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:id="@+id/scheduleHourPlus"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:id="@+id/scheduleMinutePlus"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="8."
                android:id="@+id/scheduleDay"
                android:layout_below="@+id/scheduleFlightButton"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/scheduleFlightButton"
                android:gravity="center"
                android:singleLine="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Jan"
                android:id="@+id/scheduleMonth"
                android:layout_below="@+id/scheduleFlightButton"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/scheduleFlightButton"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="19"
                android:id="@+id/scheduleHour"
                android:layout_below="@+id/scheduleFlightButton"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/scheduleFlightButton"
                android:gravity="center"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="45"
                android:id="@+id/scheduleMinute"
                android:layout_below="@+id/scheduleFlightButton"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/scheduleFlightButton"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/scheduleDayMinus"
                android:layout_below="@+id/scheduleYear"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/scheduleYear" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/scheduleMonthMinus"
                android:layout_below="@+id/scheduleYear"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/scheduleYear" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/scheduleHourMinus"
                android:layout_below="@+id/scheduleYear"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/scheduleYear"
                android:layout_marginStart="10dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/scheduleMinuteMinus"
                android:layout_below="@+id/scheduleYear"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/scheduleYear" />

        </TableRow>

    </TableLayout>

    <ExpandableListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scheduleRegisteredFlights"
        android:focusable="false"
        android:clickable="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/scheduleFlightTime" />

</RelativeLayout>